Add Postgres to Travis addons

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ python:
 
 cache: pip
 
+addons:
+  postgresql: "9.6"
+
 install:
 - pip install pytest-cov pytest-django flake8 -r requirements.txt
 
