--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ certifi==2018.1.18
 chardet==3.0.4
 django==2.0.1
 django-celery==3.2.2
+django-environ==0.4.4
 djangorestframework==3.7.7
 idna==2.6
 kombu==3.0.37
@@ -17,4 +18,5 @@ psycopg2==2.7.3.2
 pytz==2017.3
 redis==2.10.6
 requests==2.18.4
+six==1.11.0
 urllib3==1.22
