--- a/requirements.txt
+++ b/requirements.txt
@@ -9,15 +9,21 @@ celery==3.1.25
 certifi==2018.1.18
 chardet==3.0.4
 django==2.0.1
+django-appconf==1.0.2
 django-celery==3.2.2
+django-compressor==2.2
 django-environ==0.4.4
+django-libsass==0.7
 djangorestframework==3.7.7
 idna==2.6
 kombu==3.0.37
+libsass==0.13.6
 psycopg2==2.7.3.2
 pytz==2017.3
 raven==6.5.0
+rcssmin==1.0.6
 redis==2.10.6
 requests==2.18.4
+rjsmin==1.0.12
 six==1.11.0
 urllib3==1.22
